# mono

./: .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/backend/: Cargo.toml  package.json
apps/backend/src/: main.rs
apps/backend/src/api/: admin.rs  auth.rs
apps/backend/src/api/middlewares/: user_auth.rs
apps/backend/src/lib/: auth.rs
apps/backend/src/utils/: state.rs
apps/frontend/: capacitor.config.ts  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/frontend/ios/App/App/: Info.plist
apps/frontend/ios/App/App.xcodeproj/: project.pbxproj
apps/frontend/src/: App.tsx  index.tsx
apps/frontend/src/components/: AuthPage.tsx  Button.tsx  Spinner.tsx
apps/frontend/src/features/auth/: AuthPage.tsx  GoogleAuthButton.tsx  LogoutButton.tsx  MicrosoftAuthButton.tsx  UserLand.tsx
apps/frontend/src/layouts/: AdminLayout.tsx  AppLayout.tsx
apps/frontend/src/lib/: ky.ts  url.ts
apps/frontend/src/lib/hooks/: auth.ts  platform.ts
apps/frontend/src/pages/: SignIn.tsx  SignUp.tsx
apps/frontend/src/routing/: AuthenticateRoute.tsx  ProtectedUserRoute.tsx
apps/www/backend/: Cargo.toml
apps/www/backend/backend/: Cargo.toml  package.json
apps/www/backend/backend/src/utils/: state.rs
apps/www/backend/frontend/: Cargo.toml
apps/www/backend/frontend/src/: main.rs
apps/www/backend/src/: main.rs
apps/www/backend/src/api/: auth.rs
apps/www/backend/src/lib/auth/: Cargo.toml
apps/www/backend/src/utils/: cors.rs  state.rs
apps/www/frontend/: index.html  package.json  pnpm-lock.yaml
apps/www/frontend/src/: App.tsx  index.tsx
apps/www/frontend/src/features/auth/: MicrosoftAuthButton.tsx
