[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
actix-cors = "0.7.0"
actix-web = "4.5.1"
db = { path = "../../packages/db/client"}
dotenv = "0.15.0"
base64 = "0.22.1"
jsonwebtoken = "9.3.0"
log = "0.4.21"
reqwest = {version = "0.12.4", features= ["blocking", "json"]}
serde = { version = "1.0.201", features = ["derive"]}
serde_json = "1.0.117"
actix-service = "2.0.2"
futures = "0.3.30"
actix-session = {version = "0.9.0", features = ["cookie-session"]}
actix-identity = "0.7.1"
